# AI-Travel-Planner

./: Dockerfile  README.md  app.py  main.py  pyproject.toml  requirements.txt  setup.py
Agent/: agent.py
Prompt/: system_prompt.py
Tools/: Calculator_And_currency_tool.py  Place_search_tool.py  itenary_planner_tool.py  weather_tool.py
configuration/: config.py  config.yaml
frontend/: index.html  script.js
static/: script.js  style.css
templates/: index.html
utils/: llm_loader.py  pdf_generator.py  place_info.py  save_document.py  weather_info.py
